# pytorch_job_manager

./: CHANGELOG.md  INSTALL.md  MANIFEST.in  QUICKSTART.md  README.md  TUTORIAL.md  TUTORIAL_EN.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: affinity_usage.py  basic_usage.py  single_node_training.py
pytorch_job_manager/: __init__.py  manager.py
