[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-job-manager"
version = "0.1.0"
description = "A package for managing PyTorch distributed training jobs on Kubeflow"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pytorch", "kubeflow", "distributed-training", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gradio>=3.0.0",
    "kubernetes>=20.0.0",
    "kubeflow-training>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/yourusername/pytorch-job-manager"
Documentation = "https://github.com/yourusername/pytorch-job-manager#readme"
Repository = "https://github.com/yourusername/pytorch-job-manager"
"Bug Tracker" = "https://github.com/yourusername/pytorch-job-manager/issues"

[tool.setuptools]
packages = ["pytorch_job_manager"]

[tool.setuptools.package-data]
pytorch_job_manager = ["py.typed"]
